fix: update recipe source paths to point to repo root
The recipe files had source paths pointing to pixi-build-backends/ instead
of the repository root where the crates/ directory and LICENSE file are
located.

--- a/pixi-build-backends/recipe/py-pixi-build-backend/recipe.yaml
+++ b/pixi-build-backends/recipe/py-pixi-build-backend/recipe.yaml
@@ -8,7 +8,7 @@ package:
   version: ${{ version }}
 
 source:
-  path: ../..
+  path: ../../..
 
 requirements:
   build:
@@ -33,7 +33,7 @@ requirements:
 
 build:
   script:
-    - cd py-pixi-build-backend
+    - cd pixi-build-backends/py-pixi-build-backend
     - pip install . -vv --no-build-isolation
   python:
     version_independent: true
