Don't provide attestation for PRs

--- a/.github/workflows/backends-release.yml
+++ b/.github/workflows/backends-release.yml
@@ -15,6 +15,7 @@ on:
       - 'crates/pixi-build-cmake/**'
       - 'crates/pixi-build-rust/**'
       - 'crates/pixi-build-mojo/**'
+      - ' .github/workflows/backends-release.yml'
   push:
     branches:
       - main
@@ -25,6 +26,7 @@ on:
       - 'crates/pixi-build-cmake/**'
       - 'crates/pixi-build-rust/**'
       - 'crates/pixi-build-mojo/**'
+      - ' .github/workflows/backends-release.yml'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref_name }}
@@ -102,6 +104,7 @@ jobs:
           pixi run -e backends-release build-recipe-ci $RUNNER_TEMP pixi-build-backends/recipe/${{ matrix.bins.bin }}/recipe.yaml ${{ matrix.bins.target }}
 
       - uses: actions/attest@daf44fb950173508f38bd2406030372c1d1162b1 # v3.0.0
+        if: github.event_name != 'pull_request'
         id: attest
         with:
           subject-path: "${{ runner.temp }}/**/*.conda"
@@ -109,6 +112,7 @@ jobs:
           predicate: "{\"targetChannel\": \"https://prefix.dev/pixi-build-backends\"}"
 
       - name: Generate attestation for conda package
+        if: github.event_name != 'pull_request'
         shell: bash
         run: |
           # Convert Windows paths to Unix-style for bash compatibility
