--- a/.github/workflows/backends-release.yml
+++ b/.github/workflows/backends-release.yml
@@ -2,11 +2,6 @@ name: "Backends - Conda Packages"
 
 on:
   workflow_dispatch:
-    inputs:
-      package_name:
-        description: "Build specific package only (optional)"
-        required: false
-        type: string
   push:
     branches:
       - main
@@ -27,38 +22,7 @@ permissions:
   contents: read
 
 jobs:
-  generate-matrix:
-    runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set_version.outputs.matrix }}
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-        with:
-          persist-credentials: false
-      - uses: prefix-dev/setup-pixi@82d477f15f3a381dbcc8adc1206ce643fe110fb7 # v0.9.3
-        with:
-          environments: backends-release
-      - name: Extract versions
-        id: set_version
-        run: |
-          # extract names and versions from cargo metadata
-          # and generate a matrix entries for the build job
-          echo "Package name input: '${GITHUB_EVENT_INPUTS_PACKAGE_NAME}'"
-          if [ -n "${GITHUB_EVENT_INPUTS_PACKAGE_NAME}" ]; then
-            echo "Building specific package: ${GITHUB_EVENT_INPUTS_PACKAGE_NAME}"
-            MATRIX_JSON=$(pixi run -e backends-release generate-matrix --package "${GITHUB_EVENT_INPUTS_PACKAGE_NAME}")
-          else
-            echo "Building all packages"
-            MATRIX_JSON=$(pixi run -e backends-release generate-matrix)
-          fi
-
-          echo "Generated matrix: $MATRIX_JSON"
-          echo "matrix=$MATRIX_JSON" >> $GITHUB_OUTPUT
-        env:
-          GITHUB_EVENT_INPUTS_PACKAGE_NAME: ${{ github.event.inputs.package_name }}
-
   build:
-    needs: generate-matrix
     permissions:
       id-token: write
       attestations: write
@@ -67,9 +31,21 @@ jobs:
       REPO_NAME: "prefix-dev/pixi"
     strategy:
       matrix:
-        bins: ${{ fromJSON(needs.generate-matrix.outputs.matrix) }}
+        include:
+          - target: linux-64
+            os: ubuntu-latest
+          - target: linux-aarch64
+            os: ubuntu-latest
+          - target: linux-ppc64le
+            os: ubuntu-latest
+          - target: win-64
+            os: windows-latest
+          - target: osx-64
+            os: macos-15-intel
+          - target: osx-arm64
+            os: macos-15
       fail-fast: false
-    runs-on: ${{ matrix.bins.os }}
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
         with:
@@ -78,21 +54,20 @@ jobs:
         with:
           environments: backends-release
       - name: Enable long paths (Windows)
-        if: ${{ matrix.bins.os == 'windows-latest' }}
-        run: |
-          git config --global core.longpaths true
+        if: matrix.os == 'windows-latest'
+        run: git config --global core.longpaths true
         shell: bash
-      - name: Set environment variable for recipe version
+      - name: Set package version environment variables
         shell: bash
-        run: |
-          echo "${{ matrix.bins.env_name }}=${{ matrix.bins.version }}" >> $GITHUB_ENV
-      - name: Build ${{ matrix.bins.bin }}
+        run: pixi run -e backends-release generate-versions >> $GITHUB_ENV
+
+      - name: Build all backends for ${{ matrix.target }}
         shell: bash
         env:
           RATTLER_BUILD_ENABLE_GITHUB_INTEGRATION: "true"
           RATTLER_BUILD_COLOR: "always"
         run: |
-          pixi run -e backends-release build-recipe-ci $RUNNER_TEMP pixi-build-backends/recipe/${{ matrix.bins.bin }}/recipe.yaml ${{ matrix.bins.target }}
+          pixi run -e backends-release build-backend-packages ${{ matrix.target }}
 
       - uses: actions/attest@daf44fb950173508f38bd2406030372c1d1162b1 # v3.0.0
         id: attest
@@ -101,37 +76,14 @@ jobs:
           predicate-type: "https://schemas.conda.org/attestations-publish-1.schema.json"
           predicate: "{\"targetChannel\": \"https://prefix.dev/pixi-build-backends\"}"
 
-      - name: Generate attestation for conda package
+      - name: Generate attestations for conda packages
         shell: bash
-        run: |
-          # Convert Windows paths to Unix-style for bash compatibility
-          RUNNER_TEMP_UNIX="${{ runner.temp }}"
-          RUNNER_TEMP_UNIX="${RUNNER_TEMP_UNIX//\\//}"
-          BUNDLE_PATH_UNIX="${STEPS_ATTEST_OUTPUTS_BUNDLE_PATH//\\//}"
-
-          # Find the actual conda package file (search recursively)
-          CONDA_PACKAGE=$(find "$RUNNER_TEMP_UNIX" -name "*.conda" -type f | head -1)
-          if [ -n "$CONDA_PACKAGE" ]; then
-            # Extract just the filename without path
-            PACKAGE_NAME=$(basename "$CONDA_PACKAGE")
-            # Create signature filename by replacing .conda with .sig
-            SIG_NAME="${PACKAGE_NAME%.conda}.sig"
-            # Get the directory where the conda package is located
-            PACKAGE_DIR=$(dirname "$CONDA_PACKAGE")
-            # Move the attestation bundle to the same directory as the conda package
-            mv "$BUNDLE_PATH_UNIX" "$PACKAGE_DIR/$SIG_NAME"
-            echo "Created attestation: $PACKAGE_DIR/$SIG_NAME"
-          else
-            echo "Error: No conda package found in $RUNNER_TEMP_UNIX"
-            exit 1
-          fi
-        env:
-          STEPS_ATTEST_OUTPUTS_BUNDLE_PATH: ${{ steps.attest.outputs.bundle-path }}
+        run: pixi run -e backends-release generate-attestations "${{ runner.temp }}" "${{ steps.attest.outputs.bundle-path }}"
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6
         with:
-          name: conda-packages-${{ matrix.bins.bin }}-${{ matrix.bins.target }}
+          name: conda-packages-${{ matrix.target }}
           path: |
             ${{ runner.temp }}/**/*.conda
             ${{ runner.temp }}/**/*.sig
@@ -150,27 +102,8 @@ jobs:
           # Wait a moment for handles to be released
           Start-Sleep -Seconds 2
 
-  aggregate:
-    needs: build
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        target: [linux-64, linux-aarch64, linux-ppc64le, win-64, osx-64, osx-arm64]
-    steps:
-      - name: Download conda package artifacts for ${{ matrix.target }}
-        uses: actions/download-artifact@95815c38cf2ff2164869cbab79da8d1f422bc89e # v4
-        with:
-          pattern: conda-packages-*-${{ matrix.target }}
-          path: conda-artifacts-${{ matrix.target }}
-          merge-multiple: true
-      - name: Upload aggregated conda packages for ${{ matrix.target }}
-        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6
-        with:
-          name: conda-packages-${{ matrix.target }}
-          path: conda-artifacts-${{ matrix.target }}/**/*.conda
-
   upload:
-    needs: aggregate
+    needs: build
     runs-on: ubuntu-latest
     if: github.repository == 'prefix-dev/pixi'
     steps:
