fix: only disable debuginfo in ci

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -27,7 +27,7 @@ CARGO_WORKSPACE_DIR = { value = "", relative = true }
 [target.aarch64-unknown-linux-musl]
 linker = "aarch64-linux-gnu-gcc"
 
-[profile.dev]
+[profile.ci]
 # Disabling debug info speeds up builds a bunch,
 # and we don't rely on it for debugging that much.
 debug = 0
