--- a/pixi-build-backends/backends/pixi-build-ros/pixi.toml
+++ b/pixi-build-backends/backends/pixi-build-ros/pixi.toml
@@ -28,12 +28,6 @@ pydantic = ">=2.8.2,<3"
 [pypi-dependencies]
 pixi-build-ros = { path = ".", editable = true }
 
-[environments]
-default = { features = ["test", "lint"], solve-group = "default" }
-lint = { features = ["lint"], no-default-feature = true }
-test = { features = ["test"], solve-group = "default" }
-
-
 [feature.test.tasks]
 build-pixi-release = "pixi run --manifest-path ../../../pixi.toml build-release"
 lint-mypy = "mypy"
@@ -48,10 +42,9 @@ cmd = """
 rattler-build build \
   --experimental \
   --no-build-id \
-  --recipe ../../recipe/pixi-build-ros \
-  --variant-config ../../recipe/variants.yaml \
-  --channel https://prefix.dev/pixi-build-backends \
+  --recipe ../../recipe/all-backends/recipe.yaml \
   --channel https://prefix.dev/conda-forge \
+  --variant-config ../../recipe/variants.yaml \
   --output-dir tests/integration/artifacts-channel
 """
 description = "Build pixi-build-ros into local test channel"
@@ -69,7 +62,7 @@ description = "Build and index local ROS backend channel for integration tests"
 mypy = ">=1.18.2,<2"
 pixi-pycharm = ">=0.0.8,<0.1"
 pytest = "*"
-rattler-build = ">=0.55.0,<0.56"
+rattler-build = { git = "https://github.com/prefix-dev/rattler-build.git", branch = "refactor" }
 rattler-index = ">=0.25.2,<0.26"
 syrupy = ">=5,<6"
 types-pyyaml = "*"
@@ -108,3 +101,8 @@ typing-extensions = "*"
 # this depends has to match the test dependency, so switch comments if needed
 #py-pixi-build-backend = "*"
 py-pixi-build-backend = { path = "../../py-pixi-build-backend" }
+
+[environments]
+default = { features = ["test", "lint"], solve-group = "default" }
+lint = { features = ["lint"], no-default-feature = true }
+test = { features = ["test"], solve-group = "default" }
