--- a/.github/workflows/backends-release.yml
+++ b/.github/workflows/backends-release.yml
@@ -13,6 +13,7 @@ on:
       - "crates/pixi-build-rust/**"
       - "crates/pixi-build-mojo/**"
       - ".github/workflows/backends-release.yml"
+  pull_request:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref_name }}
