--- a/schema/examples/valid/full.toml
+++ b/schema/examples/valid/full.toml
@@ -71,6 +71,7 @@ git4 = { git = "https://github.com/prefix-dev/rattler", rev = "v0.1.0", subdirec
 no-binary = ["testpypi"]
 no-build = ["foobar"]
 no-build-isolation = ["requests"]
+skip-wheel-filename-check = false
 
 [pypi-dependencies]
 requests = { version = ">= 2.8.1, ==2.8.*", extras = [
@@ -134,6 +135,7 @@ test = "*"
 [feature.yes-build.pypi-options]
 dependency-overrides = { numpy = ">=2.0.0" }
 no-build = true
+skip-wheel-filename-check = true
 
 [feature.prod]
 activation = { scripts = ["activate.sh", "deactivate.sh"] }
