Don't add .git folder to staging

--- a/pixi-build-backends/recipe/all-backends/recipe.yaml
+++ b/pixi-build-backends/recipe/all-backends/recipe.yaml
@@ -22,6 +22,9 @@ outputs:
       name: rust-backends-build
     source:
       - path: ../../..
+        filter:
+          exclude:
+            - .git
     requirements:
       build:
         - ${{ compiler("rust") }}
