--- a/pixi-build-backends/backends/pixi-build-ros/pixi.toml
+++ b/pixi-build-backends/backends/pixi-build-ros/pixi.toml
@@ -66,6 +66,7 @@ pixi-pycharm = ">=0.0.8,<0.1"
 pytest = "*"
 rattler-build = { git = "https://github.com/prefix-dev/rattler-build.git", branch = "refactor" }
 rattler-index = ">=0.25.2,<0.26"
+sccache = ">=0.12,<0.13"
 syrupy = ">=5,<6"
 types-pyyaml = "*"
 # You can skip this as it's a long build, uncomment this when developing only in this package
