--- a/.github/workflows/backends-release.yml
+++ b/.github/workflows/backends-release.yml
@@ -14,6 +14,7 @@ on:
       - "crates/pixi-build-mojo/**"
       - ".github/workflows/backends-release.yml"
   pull_request:
+    types: [labeled]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref_name }}
@@ -24,6 +25,7 @@ permissions:
 
 jobs:
   build:
+    if: github.event_name != 'pull_request' || github.event.label.name == 'release:backends'
     timeout-minutes: 40
     permissions:
       id-token: write
