--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,6 @@ clap = { version = "4.5.31", default-features = false }
 clap-verbosity-flag = "3.0.2"
 clap_complete = "4.5.46"
 clap_complete_nushell = "4.5.5"
-coalesced_map = "0.1.2"
 comfy-table = "7.2.1"
 console = "0.16.1"
 console-subscriber = "0.5.0"
@@ -62,7 +61,6 @@ digest = "0.10"
 dirs = "6.0.0"
 dunce = "1.0.5"
 fancy_display = { path = "crates/fancy_display" }
-file_url = "0.2.6"
 flate2 = "1.1.0"
 fs-err = { version = "3.1.0" }
 fs_extra = "1.3.0"
@@ -139,27 +137,7 @@ pypi_mapping = { path = "crates/pypi_mapping" }
 pypi_modifiers = { path = "crates/pypi_modifiers" }
 pyproject-toml = "0.13.7"
 rand = { version = "0.9.1", default-features = false }
-rattler = { version = "0.39.0", default-features = false }
-rattler-build = { git = "https://github.com/prefix-dev/rattler-build", branch = "main", default-features = false }
-rattler_cache = { version = "0.6.2", default-features = false }
-rattler_conda_types = { version = "0.42.0", default-features = false, features = [
-  "rayon",
-] }
-rattler_digest = { version = "1.2.0", default-features = false }
-rattler_lock = { version = "0.26.7", default-features = false }
-rattler_menuinst = { version = "0.2.35", default-features = false }
-rattler_networking = { version = "0.25.22", default-features = false, features = [
-  "dirs",
-  "google-cloud-auth",
-] }
-rattler_package_streaming = { version = "0.23.14", default-features = false }
-rattler_repodata_gateway = { version = "0.25.0", default-features = false }
-rattler_shell = { version = "0.25.8", default-features = false }
-rattler_solve = { version = "4.1.0", default-features = false }
-rattler_upload = { version = "0.4.5", default-features = false, features = [
-  "s3",
-] }
-rattler_virtual_packages = { version = "2.3.0", default-features = false }
+
 rayon = "1.10.0"
 recipe-stage0 = { path = "crates/recipe-stage0" }
 regex = "1.11.1"
@@ -186,7 +164,6 @@ serde_yaml = "0.9.34"
 sevenz-rust2 = "0.20.0"
 shlex = "1.3.0"
 signal-hook = "0.3.17"
-simple_spawn_blocking = { version = "1.1.0", default-features = false }
 slotmap = "1.0.7"
 spdx = "0.10.8"
 strsim = "0.11.1"
@@ -242,6 +219,35 @@ which = "8.0.0"
 xxhash-rust = "0.8.15"
 zip = { version = "2.4.2", default-features = false }
 zstd = { version = "0.13.3", default-features = false }
+
+# Rattler crates
+coalesced_map = "0.1.2"
+file_url = "0.2.6"
+rattler = { version = "0.39.0", default-features = false }
+rattler_cache = { version = "0.6.2", default-features = false }
+rattler_conda_types = { version = "0.43.1", default-features = false, features = [
+  "rayon",
+] }
+rattler_digest = { version = "1.2.0", default-features = false }
+rattler_lock = { version = "0.26.7", default-features = false }
+rattler_menuinst = { version = "0.2.35", default-features = false }
+rattler_networking = { version = "0.25.22", default-features = false, features = [
+  "dirs",
+  "google-cloud-auth",
+] }
+rattler_package_streaming = { version = "0.23.14", default-features = false }
+rattler_repodata_gateway = { version = "0.25.0", default-features = false }
+rattler_shell = { version = "0.25.8", default-features = false }
+rattler_solve = { version = "4.1.0", default-features = false }
+rattler_upload = { version = "0.4.5", default-features = false, features = [
+  "s3",
+] }
+rattler_virtual_packages = { version = "2.3.0", default-features = false }
+rattler_config = { version = "0.2.25", default-features = false }
+simple_spawn_blocking = { version = "1.1.0", default-features = false }
+
+# Rattler build crates
+rattler-build = { git = "https://github.com/prefix-dev/rattler-build", branch = "main", default-features = false }
 
 [patch.crates-io]
 # This is a temporary patch to get `cargo vendor` to work with the `uv` and pep508_rs` crates.
